Removed support for Spark 2 and Scala 2.11. Tests left to fix,